--- a/assessment.html
+++ b/assessment.html
@@ -7,10 +7,10 @@
       property="og:url"
       content="https://Lumi-Saari.github.io/assessment/assessment.html"
     >
-    <meta property="og:title" content="あなたのいいところ診断">
+    <meta property="og:title" content="Lumi-Saariが作ったあなたのいいところ診断">
     <meta
       property="og:description"
-      content="ZEN Study Web アプリケーション開発コースで制作した、「あなたのいいところ診断」サイトです。"
+      content="ZEN Study Web アプリケーション開発コースで制作した、「Lumi-Saariが作ったあなたのいいところ診断」サイトです。"
     >  <link rel="stylesheet" href="assessment.css">
   <title>Lumi-Saariが作ったあなたのいいところ診断</title>
 </head>
